# imdb-nlp-sentiment

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  dataset.yaml  model_a_tfidf.yaml  model_b_static_emb.yaml  model_c_bert.yaml
src/nlp_imdb/: __init__.py
src/nlp_imdb/cli/: main.py
src/nlp_imdb/data/: __init__.py  dataset_contract.md  dataset_loader.py  splits.py
src/nlp_imdb/features/: __init__.py  embeddings_static.py  tfidf.py
src/nlp_imdb/models/: __init__.py  base.py  model_a_tfidf.py  model_b_rnn_static.py  model_c_bert.py
src/nlp_imdb/preprocessing/: __init__.py  text_cleaning.py  tokenization.py
src/nlp_imdb/training/: __init__.py  metrics.py  result.py  train_a.py  train_b.py  train_c.py  trainer.py
src/nlp_imdb/utils/: __init__.py  logging.py  paths.py  seed.py
tests/: conftest.py  test_smoke.py
