[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-imdb-sentiment"
version = "0.1.0"
description = "IMDB sentiment analysis with TF-IDF, static embeddings (RNN) and BERT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.66",
  "datasets>=2.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nlp-imdb = "nlp_imdb.cli.main:main"
